--- a/app/index.html
+++ b/app/index.html
@@ -405,7 +405,8 @@
     <div class="row"></div>
     <!-- Bootstrap Bundle (inkl. Popper.js) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="app-base.js"></script>
+    <script src="app.js"></script>
   </body>
 
   <!-- Footer -->
