--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link type="text/css" rel="stylesheet" href="app-base.css">
+    <link type="text/css" rel="stylesheet" href="app.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="app-base.js"></script>
